--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body {
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(243, 243, 243);
+    background-color:  #282828;
     margin: 0;
     padding: 0;
     display: flex;
@@ -50,10 +50,10 @@ body {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #ffffff;
+    background-color:  #282828;
     width: 100%;
     padding: 1.3rem 0;
-    border: 1px solid lightgray;
+    border: 1px solid  #282828;
 }
 
 .group:nth-child(1) {
@@ -97,6 +97,7 @@ body {
 }
 
 .get-the-app {
+    color: rgb(160, 160, 160);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -138,7 +139,7 @@ body {
 
 @media (max-width: 650px) {
     body {
-        background-color: #ffffff;
+        background-color:  #282828;
     }
 
     .instagram-wrapper {
