--- a/style.css
+++ b/style.css
@@ -21,15 +21,15 @@ body {
     display: flex;
     align-items: center;
     justify-content: start;
-    width: 60%;
-    height: 100vh;
+    width: 80%;
+    height: 95vh;
 }
 
 .instagram-phone {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 70%;
 }
 
 .instagram-phone img {
@@ -70,10 +70,13 @@ body {
     align-items: center;
     border-radius: 50%;
     overflow: hidden;
+    margin-top: 15px;
 }
 
 .profile-photo img {
-    height: 6rem;
+    height: 12rem;
+    border-bottom: 15px;
+    
 }
 
 .instagram-login {
@@ -81,6 +84,7 @@ body {
     color: #ffffff;
     padding: 8px;
     border-radius: 4px;
+    margin-top: 25px;
 }
 
 .instagram-logout {
@@ -122,10 +126,16 @@ body {
 
 .app-download:nth-child(1) {
     background-image: url('./img/apple-button.png');
+    width: 120px;
+    height: 35px;
+    border: 2px;
 }
 
 .app-download:nth-child(2) {
     background-image: url('./img/googleplay-button.png');
+    width: 120px;
+    height: 35px;
+    border: 2px;
 }
 
 /* media queries */
